[gd_scene load_steps=8 format=2]

[ext_resource path="res://Interfaces/Scripts/InterfaceResult.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Buttons/GoButton1.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Buttons/GoButton2.png" type="Texture" id=3]
[ext_resource path="res://Fonts/ice_pixel-7.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Sprites/Buttons/RestartButton1.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Buttons/RestartButton2.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 4 )

[node name="WinInterface" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="WinPanel" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="WinPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.972549 )

[node name="ColorRect2" type="ColorRect" parent="WinPanel"]
margin_left = 190.0
margin_top = 160.0
margin_right = 1040.0
margin_bottom = 540.0
color = Color( 0.45098, 0.45098, 0.45098, 1 )

[node name="GoButton" type="TextureButton" parent="WinPanel"]
margin_left = 496.0
margin_top = 420.0
margin_right = 746.0
margin_bottom = 490.0
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 3 )

[node name="Label" type="Label" parent="WinPanel"]
margin_left = 260.0
margin_top = 200.0
margin_right = 982.0
margin_bottom = 330.0
custom_fonts/font = SubResource( 1 )
text = "Congratulations you have 
completed this level, now go to the next one!"
align = 1
valign = 1
uppercase = true

[node name="LosePanel" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="LosePanel"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.972549 )

[node name="ColorRect2" type="ColorRect" parent="LosePanel"]
margin_left = 190.0
margin_top = 160.0
margin_right = 1040.0
margin_bottom = 540.0
color = Color( 0.45098, 0.45098, 0.45098, 1 )

[node name="RestartButton" type="TextureButton" parent="LosePanel"]
margin_left = 496.0
margin_top = 420.0
margin_right = 560.0
margin_bottom = 484.0
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )

[node name="Label2" type="Label" parent="LosePanel"]
margin_left = 260.0
margin_top = 200.0
margin_right = 982.0
margin_bottom = 330.0
custom_fonts/font = SubResource( 1 )
text = "YOU LOSE. TRY AGAIN!"
align = 1
valign = 1
uppercase = true
[connection signal="pressed" from="WinPanel/GoButton" to="." method="_on_GoButton_pressed"]
[connection signal="pressed" from="LosePanel/RestartButton" to="." method="_on_RestartButton_pressed"]
